element-styles/this_post/this_post_default.css
.post_date {
    color: #ufc2;
    display: block;
    font-family: 'Oswald', Arial, sans-serif;
    font-weight: 300;
    line-height: 35px;
    text-align: right;
    text-transform: uppercase;
}
.post_date .date_part_0, .post_date .date_part_1 {
    display: block;
}
.post_date .date_part_0 {
    font-size: 30px;
    letter-spacing: 0px;
}
.post_date .date_part_1 {
    font-size: 13px;
    letter-spacing: 1px;
}
.upfront-postpart-title .post_title, .upfront-postpart-title .post_title a {
    color: #ufc7;
    font-size: 25px;
    font-style: normal;
    font-weight:700;
    letter-spacing: -0.2px;
    line-height: 1.3em;
    text-transform: uppercase;
}
.upfront-postpart-title .post_title a:hover {
    color: #ufc5;
}
.upfront-postpart-author a.post_author, .post_author, .post_author a {
    color: #ufc2;
    font-family: 'Oswald', Arial, sans-serif;
    font-size: 15px;
    line-height: 25px;
    text-transform: uppercase;
    font-weight: 300;
    letter-spacing: 0.5px;
}
.upfront-postpart-author a.post_author:hover, .post_author a:hover {
    font-family: 'Oswald', Arial, sans-serif;
    color: #ufc5;
}
.upfront-postpart-author a.post_author, .post_author {
    position: relative;
}
.upfront-postpart-wrapper.part-contents:before {
    background: #ufc4;
    content: "";
    display: block;
    height: 1px;
    margin: 5px 60px 0;
    width: 100%;
}
.post_content h1, .post_content h2, .post_content h3, .post_content h6, .post_content p {
    margin: 0 45px 40px;
}
.post_content h5, .post_content h4 {
    margin: 0 45px 10px;
}
.post_content address, .post_content table, .post_content pre, .post_content cite, .post_content q, .post_content iframe, .post_content embed {
    margin-bottom: 45px;
}
.post_content ul, .post_content ol {
    padding: 0 0 25px 5px;
}
.post_content ul li, .post_content ol li {
    margin: 0 45px 10px 0;
}
.post_content > *:last-child {
    margin-bottom: 0;
}
.post_content img {
    display: block;
    height: auto;
    max-width: 100%;
}
.post_content .alignnone, .post_content .aligncenter, .post_content .alignright, .post_content .alignleft {
    max-width: 100%;
}
.post_content .alignnone, .post_content div.alignnone, .post_content .aligncenter, .post_content div.aligncenter, .post_content img.aligncenter {
    display: block;
    margin: 0 auto 45px auto;
}
.post_content .alignright, .post_content img.alignright {
    float: right;
    margin: 0 0 45px 30px;
}
.post_content .alignleft, .post_content img.alignleft {
    float: left;
    margin: 0 45px 30px 0;
}

.post_content p {
    -ms-word-break: break-word;
    word-break: break-word;
}
.post_content .wp-caption-text p, .post_content p.wp-caption-text {
    color: #ufc5;
    font-size: 13px;
    font-weight: 300;
    line-height: 13px;
    margin-top: 15px;
    margin-bottom: 0;
    text-align: center;
}
.post_content .ueditor-insert {
    margin-bottom: 0;
}
.post_content .wp-caption-text > * {
    margin: 0;
}
.post_content .wp-caption-text a {
    color: #ufc0;
    font-size: 15px;
    font-weight: 400;
    line-height: 1.333em;
}
.post_content .upfront-inserted_image-wrapper {
}
.post_content .upfront-wrapper.uinsert-image-wrapper {
    padding: 0;
}
.post_content .upfront-wrapper.wp-caption-text {
    padding: 0;
}
.post_content blockquote {
    padding: 0 0;
    margin: 20px 60px 60px;
}
.post_content blockquote p:last-child {
    margin-bottom: 0;
}

